Bug 445516 - Cache-related visual glitches when Plasma theme SVGs or Plasma Components are updated
Summary: Cache-related visual glitches when Plasma theme SVGs or Plasma Components are...
Status: RESOLVED FIXED
Alias: None
Product: libplasma
Classification: Frameworks and Libraries
Component: libplasma (other bugs)
Version First Reported In: 5.87.0
Platform: Arch Linux Linux
: VHI normal
Target Milestone: ---
Assignee: Marco Martin
URL:
Keywords:
: 445601 445750 445762 445895 446283 446364 446462 446774 446914 447696 448241 (view as bug list)
Depends on:
Blocks:
 
Reported: 2021-11-15 09:17 UTC by Reiddragon
Modified: 2022-05-27 23:05 UTC (History)
18 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.89
Sentry Crash Report:


Attachments
slider nobs with the boxes (12.02 KB, image/png)
2021-11-15 09:17 UTC, Reiddragon
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Reiddragon 2021-11-15 09:17:50 UTC
Created attachment 143565 [details]
slider nobs with the boxes

SUMMARY
The sliders' nubs in the audio applet have a small box around them, visible around the corners

STEPS TO REPRODUCE
1. 
2. 
3. 

OBSERVED RESULT
see attachment

EXPECTED RESULT
shouldn't have the boxes

SOFTWARE/OS VERSIONS
KDE Plasma Version: 5.23.3
KDE Frameworks Version: 5.88.0
Qt Version: 5.15.2
Graphics Platform: Wayland

ADDITIONAL INFORMATION
*only* affects the audio applet, other
Comment 1 David Redondo 2021-11-15 13:56:16 UTC
Is this the plasma breeze theme?
Comment 2 Reiddragon 2021-11-15 14:24:54 UTC
(In reply to David Redondo from comment #1)
> Is this the plasma breeze theme?

yes
Comment 3 Nate Graham 2021-11-16 00:38:53 UTC
I have seen multiple reports of it. Clearing the Plasma SVG cache fixes it. Do this: `rm ~/.cache/*plasma* ; killall plasmashell && kstart5 plasmashell`

In the meantime, we really need to get to the bottom of what's behind these caching issues when we update SVGs or Plasma Components code. It happens almost every time, and it provides a really negative impression for our users. :(
Comment 4 Nate Graham 2021-11-18 02:07:08 UTC
This appears to be a widespread issue following the style update in Frameworks 5.88. See for example https://www.reddit.com/r/kde/comments/qwbnmv/various_ui_bugs_since_plasma_5233/.
Comment 5 Marco Martin 2021-11-18 16:58:09 UTC
this is happening upgrading from the svgs of frameworks 5.87 to 5.88
Comment 6 Nate Graham 2021-11-19 23:47:08 UTC
In particular this commit seems to have triggered the issue a ton: https://invent.kde.org/frameworks/plasma-framework/-/commit/9c95fa56216222cb7dc0872bf2e77d94bfff27ac

I am seeing tons of people reporting abnormally thick separator lines until they clear their caches manually.
Comment 7 Nicolas Fella 2021-11-19 23:52:25 UTC
*** Bug 445762 has been marked as a duplicate of this bug. ***
Comment 8 Bharadwaj Raju 2021-11-20 18:46:59 UTC
Would it be a good idea to have a script run on every update to just unconditionally wipe the Plasma cache? It's kind of a simplistic fix but it's guaranteed to work, and cache is always safe to remove.
Comment 9 Bug Janitor Service 2021-11-23 15:33:11 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/plasma-framework/-/merge_requests/394
Comment 10 Nate Graham 2021-11-23 17:37:18 UTC
*** Bug 445895 has been marked as a duplicate of this bug. ***
Comment 11 Nate Graham 2021-11-23 21:33:03 UTC
*** Bug 445660 has been marked as a duplicate of this bug. ***
Comment 12 Nate Graham 2021-11-23 22:36:26 UTC
*** Bug 445750 has been marked as a duplicate of this bug. ***
Comment 13 Marco Martin 2021-11-29 14:40:43 UTC
Git commit fe9e118ff2212d48a0ea5fcc0346d6312978f3ed by Marco Martin.
Committed on 29/11/2021 at 14:40.
Pushed by mart into branch 'master'.

Reload shared renderers when a file changed on disk



When we have to render a new pixmap, compare the file date with the date of the last time the file was cached. if the dates are different (not only older, in order to allow downgrades) then force the svg renderer to be reloaded from the new file, otherwise the renderer with the old file still loaded will save in cache old graphics with the id derived from the date of the new file, causing a wrong cache entry

M  +13   -2    src/plasma/private/svg_p.h
M  +73   -27   src/plasma/svg.cpp

https://invent.kde.org/frameworks/plasma-framework/commit/fe9e118ff2212d48a0ea5fcc0346d6312978f3ed
Comment 14 Bharadwaj Raju 2021-11-29 15:51:31 UTC
*** Bug 445601 has been marked as a duplicate of this bug. ***
Comment 15 Nate Graham 2021-12-01 22:40:55 UTC
*** Bug 446283 has been marked as a duplicate of this bug. ***
Comment 16 Nate Graham 2021-12-02 21:19:01 UTC
*** Bug 446372 has been marked as a duplicate of this bug. ***
Comment 17 Nate Graham 2021-12-02 21:19:08 UTC
*** Bug 446364 has been marked as a duplicate of this bug. ***
Comment 18 Nate Graham 2021-12-04 19:33:27 UTC
*** Bug 446462 has been marked as a duplicate of this bug. ***
Comment 19 Nate Graham 2021-12-14 20:17:37 UTC
*** Bug 446774 has been marked as a duplicate of this bug. ***
Comment 20 Nate Graham 2022-01-04 20:53:39 UTC
*** Bug 446914 has been marked as a duplicate of this bug. ***
Comment 21 Nate Graham 2022-01-11 16:35:42 UTC
*** Bug 448241 has been marked as a duplicate of this bug. ***
Comment 22 Nate Graham 2022-01-12 01:06:09 UTC
*** Bug 447696 has been marked as a duplicate of this bug. ***